# string

./: CMakeLists.txt  init_compile_commands.bat  init_compile_commands.sh
external_include/: -0_common.h  -0_debug.h  -0_debug_types.h  -0_option.h  -0_types.h  -0_utils.h
external_include/-0/: common_export.h  common_macros.h  common_types.h  debug.h  debug_shortcut.h
include/: -2_string.h  -2_string_macros.h
include/-2/: string.h  string_macros.h  string_types.h
src/: string.c
